# traffic

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_AUFRÄUMPLAN.md  ADRESS_ERKENNUNG_DOKUMENTATION.md  AUFRÄUMPLAN_2025-11-20.md  CHANGELOG.md  CHANGELOG_2025-11-18.md  CLOUD_INTEGRATION.md  CURSOR_RULES.md  DOKUMENTATION.md  Dockerfile  FILE_INPUT_FIX_REPORT.md  LOGS_ANLEITUNG.md  MIGRATION_TO_OPENAI.md  MODULE_MAP.md  PROJECT_PROFILE.md  README.md  README_AUDIT_COMPLETE.md  README_START.md  START_ANLEITUNG.md  START_SERVER.ps1  START_SERVER_ROBUST.bat  START_SERVER_ROBUST.ps1  START_SERVER_WITH_LOGS.ps1  STATUS_AKTUELL.md  STATUS_REPORT.md  SYNTAX_CHECK_REPORT.md  SYSTEMABSCHLUSS_DOKUMENTATION.md  TODO_MORGEN.md  add_auto_werft_dresden.py  add_sven_pf_synonym.py  analyze_database.py  analyze_ignored_private_customers.py  analyze_outside_sachsen.py  analyze_remaining_issues.py  app_startup.py  check_autoservice_mehlig.py  check_current_missing.py  (+69 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: PULL_REQUEST_TEMPLATE.md
Global/: CURSOR_USAGE_BEISPIEL.md  GLOBAL_STANDARDS.md  PROJEKT_TEMPLATE.md  README.md
Regeln/: ADMIN_NAVIGATION_STANDARDS.md  AUDIT_CHECKLISTE.md  AUDIT_FLOW_ROUTING.md  CODE_PATTERNS.md  CURSOR_DOKU_UPDATE_TEMPLATE.md  CURSOR_PROMPT_TEMPLATE.md  CURSOR_WORKFLOW.md  ISSUE_TEMPLATE.md  LESSONS_LOG.md  README.md  REGELN_AUDITS.md  STANDARDS.md  STANDARDS_QUICK_REFERENCE.md
ZIP/: INHALTSVERZEICHNIS.txt  README.md  README_AUDIT.md  README_AUDIT_COMPLETE.md
admin/: address_admin_app_deprecated.py  address_admin_app_fixed.py
ai_models/: config.json  config_openai.json  pdf_ai_prompt.txt  setup_ollama.ps1
audit_package/: geocode_fill.py  geocode_persist.py  normalize.py  stop_dto.py  tour_plan_parser.py  tourplan_match.py
audit_sub_routen_2025-11-15/: AUDIT_SUB_ROUTEN_GENERATOR_2025-11-15.md  PROBLEM_SUB_ROUTEN_GENERATOR_2025-11-15.md  frontend_index.html
backend/: app.py  app_setup.py  config.py  error_handlers.py
common/: normalize.py  synonyms.py  text_cleaner.py  tour_data_models.py  validation_models.py
config/: README.md  address_analysis_20251007_074417.json  app.yaml  bar_customers_mappings.json  geocodes_export.json  mapping_suggestions_20251007_074417.json  mapping_suggestions_20251007_075316.json  private_customers_ignore.json  tour_ignore_list.json
db/: core.py  migrate_schema.py  schema.py  schema_error_learning.py  schema_fail.py  schema_manual.py  schema_phase2.py  schema_users.py
debug/: debug_andre_zerbst.py  debug_csv_analysis.py  debug_csv_direct.py  debug_csv_simple.py  debug_encoding_issues.py  debug_geocache.py  debug_geocache_detailed.py  debug_geocache_heidenau.py  debug_geocodes.py  debug_geocodes2.py  debug_geocoding_error.py  debug_last_mojibake.py
docs/: ADAPTIVE_PATTERN_ENGINE.md  ADMIN_BEREICH_DOKUMENTATION.md  ADMIN_LOGIN_ANLEITUNG.md  AENDERUNGEN_2025-11-20.md  AENDERUNGEN_SUBROUTEN_2025-11-16_DETAIL.md  AI_CODE_CHECKER_INTEGRATION.md  ANALYSE_KEY_MISMATCH_2025-11-16.md  API.md  API_MIGRATION_PLAN.md  APP_NICHT_BEDIENBAR_2025-11-16.md  APP_NICHT_BEDIENBAR_DIAGNOSE_2025-11-16.md  ARCHITEKTUR_KOMPLETT.md  ARCHITEKTUR_REVIEW_ROADMAP_2025-11-22.md  ARCHIVE_PLAN.md  AUDIT_DB_VERWALTUNG_TOUR_IMPORT_2025-11-19.md  AUDIT_FEHLER_DB_VERWALTUNG_2025-11-19.md  AUDIT_TOUR_IMPORT_FEATURE_2025-11-19.md  Api_Docs.md  Architecture.md  BENUTZER_AUTHENTIFIZIERUNG_2025-11-22.md  BLITZER_HINDERNISSE_INTEGRATION.md  CHANGELOG_2025-11-06.md  CHECKLIST_POST_FIX.md  CI_FEHLER_ANALYSE_2025-11-16.md  CI_FEHLER_ANALYSE_2025-11-22.md  CI_FEHLER_FIX_2025-11-16.md  (+122 more)
(+1034 files in other folders)
