[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "famo-trafficapp"
version = "3.0.0"
description = "FAMO TrafficApp - On-Prem Routenplanung mit KI"
authors = [
    {name = "FAMO GmbH", email = "info@famo.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "requests>=2.32.3",
    "geopy>=2.4.1",
    "sqlalchemy>=2.0.30",
    "cryptography>=42.0.5",
    "rapidfuzz>=3.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "respx>=0.21.1",
]
pdf = [
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "reportlab>=4.0.9",
    "weasyprint>=61.2",
]
routing = [
    "openrouteservice>=2.3.3",
]

[project.urls]
Homepage = "https://github.com/famo/trafficapp"
Repository = "https://github.com/famo/trafficapp.git"
Issues = "https://github.com/famo/trafficapp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "common*", "repositories*", "services*", "routes*", "db*", "fs*", "ingest*"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "timeout: marks tests with timeout (requires pytest-timeout)",
]

[tool.coverage.run]
source = ["backend", "common", "repositories", "services", "routes", "db", "fs", "ingest"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
